<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <EditText
        android:id="@+id/dialogInputAvtaleNavn"
        android:hint="@string/dialogInputAvtaleNavn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/dialogInputDato"
        android:hint="@string/dialogInputDato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/dialogInputKlokkeslett"
        android:hint="@string/dialogInputKlokkeslett"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/dialogInputTreffsted"
        android:hint="@string/dialogInputTreffsted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/dialogInputVenner"
        android:hint="@string/dialogInputVenner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" />

</LinearLayout>
