<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.s364765.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/topLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:padding="16dp"
        tools:context="com.example.s364765.MainActivity">
        <!-- Logo -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/appikonliten" />
        <!-- Tittel -->
        <TextView
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/avtalerTittel"
            android:textColor="@color/black"
            android:textSize="25sp" />


    </LinearLayout>

    <!-- Layout for list view -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp">

        <ListView
            android:id="@+id/avtalerListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottomLinearLayout"
            android:layout_below="@+id/topLinearLayout" />

    </LinearLayout>

    <!-- Layout for knapper -->
    <LinearLayout
        android:id="@+id/bottomLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="3">

        <!-- Ny avtale knapp -->
        <Button
            android:id="@+id/avtaleBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:drawableRight="@drawable/appointment"
            android:paddingRight="10dp"
            android:text="@string/AvtaleBtn" />

        <!-- Skille mellom knapp -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <!-- Venner knapp -->
        <Button
            android:id="@+id/vennerBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:drawableRight="@drawable/contacts"
            android:paddingRight="10dp"
            android:text="@string/vennerBtn" />

        <!-- Skille mellom knapp -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <!-- Preferanser knapp -->
        <Button
            android:id="@+id/preferanserBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:drawableRight="@drawable/settings"
            android:text="@string/preferanserBtn" />


    </LinearLayout>


</RelativeLayout>